--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "frontend-class-admin-react-ssr",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.35",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
-  }
+    "name": "frontend-class-admin-react-ssr",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "node server.js",
+        "build": "next build",
+        "start": "NODE_ENV=production node server.js",
+        "debug": "NODE_OPTIONS='--inspect' next dev"
+    },
+    "dependencies": {
+        "antd": "^4.3.2",
+        "axios": "^0.19.2",
+        "express": "^4.17.1",
+        "next": "9.4.4",
+        "normalize.css": "^8.0.1",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "sass": "^1.26.8"
+    },
+    "devDependencies": {
+        "@types/node": "^14.0.11",
+        "@types/react": "^16.9.35",
+        "@typescript-eslint/eslint-plugin": "^3.1.0",
+        "@typescript-eslint/parser": "^3.1.0",
+        "eslint": "^7.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-react": "^7.20.0",
+        "http-proxy-middleware": "^1.0.4",
+        "prettier": "^2.0.5",
+        "typescript": "^3.9.5"
+    }
 }
